--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
+    "@distube/ytdl-core": "^4.14.4",
     "@distube/ytsr": "^2.0.0",
     "discord.js": "^14.8.0",
     "distube": "^4.1.1",
